# intelstream

./: .env.example  .gitignore  README.md  claude_notes.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/intelstream/: bot.py  config.py  main.py
src/intelstream/adapters/: __init__.py  arxiv.py  base.py  page.py  rss.py  smart_blog.py  substack.py  twitter.py  youtube.py
src/intelstream/adapters/strategies/: llm_extraction.py  rss_discovery.py  sitemap_discovery.py
src/intelstream/database/: __init__.py  exceptions.py  models.py  repository.py
src/intelstream/discord/cogs/: __init__.py  config_management.py  content_posting.py  github.py  github_polling.py  message_forwarding.py  search.py  source_management.py  suck_boobs.py  summarize.py
src/intelstream/noosphere/: config.py  constants.py  cryptobiosis.py  engine.py  models.py  pathology.py  pathology_cog.py
src/intelstream/noosphere/attractor_dashboard/: cog.py  metrics.py
src/intelstream/noosphere/cordyceps_audit/: audit.py  cog.py  vocabulary_tracker.py
src/intelstream/services/: __init__.py  content_extractor.py  content_poster.py  github_poster.py  github_service.py  message_forwarder.py  page_analyzer.py  pipeline.py  search.py  summarizer.py  web_fetcher.py
src/intelstream/utils/: feed_utils.py  url_validation.py
tests/: conftest.py  test_config.py  test_database.py
tests/noosphere/: test_attractor_dashboard.py  test_cordyceps_audit.py  test_cryptobiosis.py  test_morphogenetic_field.py  test_pathology.py  test_resonance_mirror.py  test_shared_models.py
tests/test_adapters/: test_arxiv.py  test_page.py  test_smart_blog.py  test_substack.py  test_twitter.py  test_youtube.py
tests/test_adapters/test_strategies/: test_llm_extraction.py  test_rss_discovery.py  test_sitemap_discovery.py
tests/test_discord/: test_bot.py  test_content_posting.py  test_github.py  test_github_polling.py  test_message_forwarding.py  test_search.py  test_source_management.py  test_summarize.py
tests/test_noosphere/: test_archive_decay.py  test_baseline.py  test_config.py  test_constants.py  test_crystal_room.py  test_data_models.py  test_egregore.py  test_engine.py  test_fibonacci.py  test_ghost_channel.py  test_metrics_computer.py  test_mode_manager.py  test_models.py  test_output_governor.py  test_phi_parameter.py  test_pulse.py  test_serendipity.py  test_soundscape.py
tests/test_services/: test_content_poster.py  test_github_poster.py  test_github_service.py  test_message_forwarder.py  test_page_analyzer.py  test_pipeline.py  test_search.py  test_summarizer.py  test_web_fetcher.py
tests/test_utils/: test_feed_utils.py  test_url_validation.py
(+23 files in other folders)
