[project]
name = "intelstream"
version = "0.1.0"
description = "Discord bot that summarizes content from Substack, YouTube, and blogs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "google-api-python-client>=2.159.0",
    "youtube-transcript-api>=0.6.3",
    "anthropic>=0.43.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "trafilatura>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "mypy>=1.14.1",
    "respx>=0.22.0",
    "types-beautifulsoup4>=4.12.0.20241020",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
]

[project.scripts]
intelstream = "intelstream.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelstream"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["intelstream"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "googleapiclient.*",
    "youtube_transcript_api.*",
    "trafilatura.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/intelstream"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "design"]
skips = ["B101"]  # Skip assert warnings (used appropriately in production code)
